Added a register portion

--- a/templates/includes/_navbar.html
+++ b/templates/includes/_navbar.html
@@ -229,38 +229,7 @@
                   </li>
                 </ul>
               </li>
-              <li class="parent"><a href="#"><i class="icon mdi mdi-folder"></i><span>Menu Levels</span></a>
-                <ul class="sub-menu">
-                  <li class="parent"><a href="#"><i class="icon mdi mdi-undefined"></i><span>Level 1</span></a>
-                    <ul class="sub-menu">
-                      <li><a href="#"><i class="icon mdi mdi-undefined"></i><span>Level 2</span></a>
-                      </li>
-                      <li class="parent"><a href="#"><i class="icon mdi mdi-undefined"></i><span>Level 2</span></a>
-                        <ul class="sub-menu">
-                          <li><a href="#"><i class="icon mdi mdi-undefined"></i><span>Level 3</span></a>
-                          </li>
-                          <li><a href="#"><i class="icon mdi mdi-undefined"></i><span>Level 3</span></a>
-                          </li>
-                        </ul>
-                      </li>
-                    </ul>
-                  </li>
-                  <li class="parent"><a href="#"><i class="icon mdi mdi-undefined"></i><span>Level 1</span></a>
-                    <ul class="sub-menu">
-                      <li><a href="#"><i class="icon mdi mdi-undefined"></i><span>Level 2</span></a>
-                      </li>
-                      <li class="parent"><a href="#"><i class="icon mdi mdi-undefined"></i><span>Level 2</span></a>
-                        <ul class="sub-menu">
-                          <li><a href="#"><i class="icon mdi mdi-undefined"></i><span>Level 3</span></a>
-                          </li>
-                          <li><a href="#"><i class="icon mdi mdi-undefined"></i><span>Level 3</span></a>
-                          </li>
-                        </ul>
-                      </li>
-                    </ul>
-                  </li>
-                </ul>
-              </li>
+              <li><a href="/register-page"><i class="icon mdi mdi-plus"></i><span>Register</span></a></li>
               <li><a href="/login-page"><i class="icon mdi mdi-power"></i><span>Login</span></a></li>
             </ul>
           </div>
